2008-12-15  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
        * daemon/trashlib/Makefile.am:
	Fix dist issues

2008-12-15  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-12-12  Ryan Lortie  <desrt@desrt.ca>

	Fix memory leaks on trash backend

	* daemon/trashlib/trashdir.c:
	* daemon/trashlib/trashexpunge.c:
	* daemon/trashlib/trashitem.c:
	* daemon/trashlib/trashwatcher.c: fix memory leaks
	* daemon/gvfsbackendtrash.c: fix leaks; split enumerate into two
	functions (one for the root, one for the non-root case)

2008-12-12  Andreas Henriksson <andreas@fatal.se>

	reviewed by: Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	(ftp_connection_ensure_data_connection_pasv):
	Fix successful PASV connections (don't try to apply workaround).
	(fixes #564027)

2008-12-11  Ryan Lortie  <desrt@desrt.ca>

	Implement pull support on trash backend.

	* daemon/trashlib/trashitem.[ch]: add support for restoring items
	* daemon/gvfsbackendtrash.c: implement pull

2008-12-11  Ryan Lortie  <desrt@desrt.ca>

	New trash:/ backend.

	* daemon/trashlib: implementation of the reader side of the fd.o
	trash specification
	* daemon/gvfsbackendtrash.[ch]: rewrite based on trashlib
	* configure.ac: add daemon/trashlib/Makefile to output
	* daemon/Makefile.am: add trashlib/ subdir and include in trash
	backend libraries

2008-12-11  Dan Winship  <danw@gnome.org>

	* configure.ac: require libsoup-gnome, for SoupProxyResolverGNOME

	* daemon/gvfsbackendhttp.c (g_vfs_backend_http_init): add a
	SoupProxyResolverGNOME to the sessions, to automatically handle
	proxies. #522985

2008-12-11  Dan Winship  <danw@gnome.org>

	* daemon/soup-input-stream.c (read_async_done)
	(soup_input_stream_read_async, soup_input_stream_close_async):
	don't leak GSimpleAsyncResults. #551075.

	* daemon/gvfsbackendhttp.c (try_open_for_read): set_accumulate to
	FALSE on the response body to avoid extra allocating+freeing.