@@ -2,8 +2,11 @@
  * Copyright © 2008 Ryan Lortie
  *
  * This program is free software: you can redistribute it and/or modify
- * it under the terms of version 3 of the GNU General Public License as
- * published by the Free Software Foundation.   
+ * it under the terms of the GNU Lesser General Public License as published
+ * by the Free Software Foundation; either version 2 of the licence or (at
+ * your option) any later version.
+ *
+ * See the included COPYING file for more information.
  */
 
 #include "gvfsbackendtrash.h"
