@@ -1,7 +1,12 @@
+2008-12-15  Ryan Lortie  <desrt@desrt.ca>
+
+	* daemon/gvfsbackendtrash.c:
+	* daemon/gvfsbackendtrash.h: relicense to LGPLv2+
+
 2008-12-15  Alexander Larsson  <alexl@redhat.com>
 
-        * daemon/gvfsbackendtrash.c:
-        * daemon/trashlib/Makefile.am:
+	* daemon/gvfsbackendtrash.c:
+	* daemon/trashlib/Makefile.am:
 	Fix dist issues
 
 2008-12-15  Alexander Larsson  <alexl@redhat.com>
